<resources>
    <string name="app_name">赫曼斯运营</string>

    <string name="pay_way">支付方式</string>
    <string name="pay_online">线上支付</string>
    <string name="pay_offline">线下支付</string>

    <string name="text_client_order">客户订单</string>
    <string name="text_my_client">我的客户</string>
    <string name="text_my_services">我的售后</string>
    <string name="text_service_center">售后中心</string>
    <string name="text_me">个人中心</string>
    <string name="text_my_qr_code">我的二维码</string>
    <string name="text_change_pwd">修改密码</string>
    <string name="text_version">当前版本</string>
    <string name="text_version_name">v%s</string>
    <string name="text_logout">退出登录</string>
    <string name="text_profile">个人资料</string>
    <string name="text_avatar">头像</string>
    <string name="text_full_name">姓名</string>
    <string name="text_phone">电话</string>
    <string name="text_address">地址</string>
    <string name="text_cooperation_time">合作时间</string>
    <string name="text_edit_address">编辑地址</string>
    <string name="text_area">所在地区</string>
    <string name="text_street">街道</string>
    <string name="text_address_label">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址:</string>
    <string name="text_cooperation_label">合作时间:</string>
    <string name="text_client_detail">客户基本信息</string>
    <string name="text_create_order">创建订单</string>
    <string name="text_choose_order_type">请选择订单类型</string>
    <string name="text_order_new">新客户新开单</string>
    <string name="text_order_old">老用户二次开单</string>
    <string name="text_change_thermostat">更换温控器</string>
    <string name="text_previous">上一步</string>

    <string name="text_mission_detail">任务详情</string>
    <string name="text_client_owner">客户/业主</string>
    <string name="text_contact_address">联系地址</string>
    <string name="text_service_problem">售后问题</string>
    <string name="text_remark">备注</string>
    <string name="text_service_phone">售后中心座机</string>

    <string name="text_login">登录</string>
    <string name="text_forgot">忘记密码</string>
    <string name="text_reset_pwd">修改初始密码</string>

    <string name="text_username">用户名</string>
    <string name="text_contact">联系方式</string>
    <string name="text_user_address">用户地址</string>
    <string name="text_order_time">订单时间：%s</string>
    <string name="text_appoint_time">指派时间：%s</string>
    <string name="text_order_detail">订单详情</string>
    <string name="text_view_order">查看订单</string>
    <string name="text_visit_measuring">上门量房</string>
    <string name="text_room_num">房间数量</string>
    <string name="text_steady_room">规则房间</string>
    <string name="text_unsteady_room">不规则房间</string>
    <string name="text_bedroom_name">房间名称</string>
    <string name="text_device_type">设备选型</string>
    <string name="text_room_width">房&#160;&#160;间&#160;&#160;长</string>
    <string name="text_room_height">房&#160;&#160;间&#160;&#160;宽</string>
    <string name="text_extra_area">增加面积</string>
    <string name="text_add_area">增附加面积</string>
    <string name="text_minus_area">减附加面积</string>
    <string name="text_cm">cm</string>
    <string name="text_room_a_width">&#160;A房间长</string>
    <string name="text_room_b_height">&#160;B房间宽</string>
    <string name="text_material_title">part A-材料清单</string>
    <string name="text_heating_title">part B-温控器清单</string>
    <string name="text_spec_model">规格型号</string>
    <string name="text_count">数量</string>
    <string name="text_rp">额定功率</string>
    <string name="text_price">价格</string>
    <string name="text_spec_model_unit">（㎡/pcs）</string>
    <string name="text_count_unit">（pcs）</string>
    <string name="text_rp_unit">（w/pcs）</string>
    <string name="text_price_unit">（元）</string>
    <string name="text_count_product">共%d件产品</string>
    <string name="text_view_detail"><u>查看详情</u></string>
    <string name="text_contact_client">联系客户</string>

    <string name="hint_phone">请输入您的手机号</string>
    <string name="hint_captcha">请输入6位验证码</string>
    <string name="hint_username">请输入您的账号</string>
    <string name="hint_password">请输入您的密码</string>
    <string name="hint_pwd_confirm">请您再次输入密码</string>
    <string name="hint_search">客户名或手机号</string>
    <string name="hint_address_detail">请输入详情地址</string>
    <string name="hint_name">请输入名字</string>
    <string name="hint_mobile">请输入电话</string>

    <string name="btn_captcha">获取验证码</string>
    <string name="btn_next">下一步</string>
    <string name="btn_confirm_info">确认信息</string>
    <string name="btn_cancel">取&#160;&#160;消</string>
    <string name="btn_ok">确&#160;&#160;定</string>
    <string name="btn_save">保&#160;&#160;存</string>
    <string name="btn_save_modify">保存修改</string>
    <string name="btn_complete_profile">完善资料</string>
    <string name="btn_modify_order">修改订单</string>

    <string name="error_password_simply">您输入的密码过于简单</string>

    <string-array name="text_order_tabs">
        <item>未处理</item>
        <item>未完成</item>
        <item>已完成</item>
    </string-array>

    <string-array name="text_order_service_tabs">
        <item>全部</item>
        <item>待处理</item>
        <item>处理中</item>
        <item>已完成</item>
    </string-array>

    <string-array name="letters">
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
    </string-array>

    <string-array name="order_status">
        <item>未处理</item>
        <item>未完成</item>
        <item>已完成</item>
    </string-array>

</resources>
