<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingTop="88dp"
    tools:context=".module.account.LoginActivity"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_logo"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:contentPadding="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_reset_pwd"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_size_body"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/et_forgot_password"
                    android:layout_width="0dp"
                    android:layout_height="17dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:drawableLeft="@mipmap/icon_password"
                    android:drawablePadding="@dimen/spacing_normal"
                    android:drawableStart="@mipmap/icon_password"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_body_material"
                    />

                <ImageView
                    android:id="@+id/iv_forgot_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_pwd_visible"
                    android:visibility="gone"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/divPrimary"
                />

            <TextView
                android:id="@+id/tv_forgot_error_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="@dimen/spacing_small"
                android:drawableLeft="@mipmap/ic_warning"
                android:drawablePadding="@dimen/spacing_normal"
                android:drawableStart="@mipmap/ic_warning"
                android:gravity="center_vertical"
                android:text="@string/error_password_simply"
                android:textColor="@color/textWarning"
                android:textSize="@dimen/text_size_caption_material"
                android:visibility="invisible"
                />

            <EditText
                android:id="@+id/et_forgot_confirm"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:drawableLeft="@mipmap/icon_password"
                android:drawablePadding="@dimen/spacing_normal"
                android:drawableStart="@mipmap/icon_password"
                android:hint="@string/hint_pwd_confirm"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_body_material"
                android:visibility="visible"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12.5dp"
                android:background="@color/divPrimary"
                />

            <Button
                android:id="@+id/btn_forgot_save"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="54dp"
                android:background="@drawable/btn_primary_selector"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/btn_save"
                android:textColor="@color/white2primary"
                android:textSize="15sp"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
