<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/include_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        >

        <com.cube.hmils.core.widget.radius.RadiusTextView
            android:id="@+id/order_riv_create_set_a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="套餐A"
            android:textColor="@color/textPrimary"
            android:textSize="17sp"
            app:rv_backgroundColor="@color/white"
            app:rv_radius="5dp"
            app:rv_strokeActivatedColor="@color/colorAccent"
            app:rv_strokeWidth="1dp"
            />

        <ImageView
            android:id="@+id/order_iv_create_tick_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_tick"
            android:visibility="gone"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        >

        <com.cube.hmils.core.widget.radius.RadiusTextView
            android:id="@+id/order_riv_create_set_b"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="套餐B"
            android:textColor="@color/textPrimary"
            android:textSize="17sp"
            app:rv_backgroundColor="@color/white"
            app:rv_radius="5dp"
            app:rv_strokeActivatedColor="@color/colorAccent"
            app:rv_strokeWidth="1dp"
            />

        <ImageView
            android:id="@+id/order_iv_create_tick_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_tick"
            android:visibility="gone"
            />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/pay_way"
        android:textColor="@color/textSecondary"
        android:textSize="14sp"
        />

    <RadioGroup
        android:id="@+id/rg_order_create_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rbtn_order_create_online"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginRight="14dp"
            android:layout_weight="1"
            android:background="@drawable/btn_pay_way_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/pay_online"
            android:textColor="@color/secondary2accent"
            android:textSize="14sp"
            />

        <RadioButton
            android:id="@+id/rbtn_order_create_offline"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/btn_pay_way_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/pay_offline"
            android:textColor="@color/secondary2accent"
            android:textSize="14sp"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_order_create_ok"
        style="@style/ButtonLarge"
        android:layout_marginTop="45dp"
        android:text="@string/btn_ok"
        />

</LinearLayout>